# MOPUp

./: .cookiecutter.json  .flake8  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE.rst  README.rst  codecov.yml  mopup.py  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  labeler.yml  release.yml  tests.yml
docs/: conf.py  index.rst  reference.rst  requirements.txt  usage.rst
src/mopup/: __init__.py  __main__.py
tests/: __init__.py  test_main.py
